removed arrows in carusels

--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
         </div>
 
         <div class="flexboxik">
-            <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
+            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2500">
                         <img src="images/Koncert-1.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/koncert-Toruń-19.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
                         <img src="images/Koncert-28.jpg" class="d-block w-100" alt="...">
@@ -43,20 +41,13 @@
                     <div class="carousel-item" data-bs-interval="2500">
                         <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
                     </div>
+                    <div class="carousel-item" data-bs-interval="2500">
+                        <img src="images/koncert-Toruń-19.jpg" class="d-block w-100" alt="...">
+                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
 
-            <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2500">
                         <img src="images/zdj.jpg" class="d-block w-100" alt="...">
@@ -65,27 +56,13 @@
                         <img src="images/Karol-gotowe-15.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/Karol-gotowe-15.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2500">
                         <img src="images/breaking-bad-9.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
-                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
+
         </div>
+
     </main>
 
     <footer>
