--- a/index.html
+++ b/index.html
@@ -1,29 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>MXR VIDEO</title>
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>MXR VIDEO</title>
 
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
     <header>
-        <!-- szanowny panie arturze prosze w headerze zrobic header ;) polecam skorzystac z bootstrapa + prosze go wystylizowac 
-        wedle pana uznania, ale nie prosze nie poswiecac na stylizacje zbyt duzo czasu bo pewnie i tak bedziemy to poprawiac - narazie
-        potrzebny jest poglądowy wyglad. W headerze ma sie znalezc dolaczone logo oraz narazie nie dzialajace "linki" przeskakujace do
-        innej "czesci strony" linki maja nazywac sie: PORTFOLIO, USŁUGI, O MNIE, FAQ, KONTAKT. wklejam link jak ma to mniej wiecej
-        wygladac lecz prosze nie zerznac 1:1 ;)) https://brevko.com/pl/ -->
+      <div id="page-logo">
+        <a href="index.html">
+          <img src="images/logo/logopage.png" alt="logo" />
+        </a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="">PORTFOLIO</a></li>
+          <li><a href="">USŁUGI</a></li>
+          <li><a href="">O MNIE</a></li>
+          <li><a href="">FAQ</a></li>
+          <li><a href="">KONTAKT</a></li>
+        </ul>
+      </nav>
     </header>
-
     <main>
+      <h2>FOTOGRAFIA</h2>
+      <div class="flexboxik">
+        <h3>KONCERTOWA</h3>
+        <h3>BACKSTAGE</h3>
+      </div>
 
+      <div class="flexboxik">
+        <div
+          id="carouselExampleInterval"
+          class="carousel slide carousel-fade"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="2500">
+              <img src="images/Koncert-1.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <img
+                src="images/koncert-Toruń-19.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <img
+                src="images/Koncert-28.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <img
+                src="images/Koncert-124-2.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <div
+          id="carouselExampleInterval"
+          class="carousel slide carousel-fade"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="2500">
+              <img src="images/zdj.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <img
+                src="images/Karol-gotowe-15.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <img
+                src="images/Karol-gotowe-15.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <img
+                src="images/breaking-bad-9.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <img
+                src="images/Koncert-124-2.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
     </main>
 
-    <footer>
+    <footer></footer>
 
-    </footer>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
