added yt player

--- a/index.html
+++ b/index.html
@@ -21,47 +21,120 @@
     </header>
 
     <main>
+        <section>
+            <h2>TELEDYSKI</h2>
+            <div class="row">
+                <div class="col-8">
+                    <iframe id="ytFrame" width="100%" height="100%"
+                        src="https://www.youtube.com/embed/VU1SX5FuG5U?si=2uNT1Jp00Sh7grc0" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="col-4">
+                    <ol>
 
-        <h2>FOTOGRAFIA</h2>
-        <div class="flexboxik">
-            <h3>KONCERTOWA</h3>
-            <h3>BACKSTAGE</h3>
-        </div>
+                        <li id="firstLink">
+                            <a href="#">
+                                <div class="flexboxik">
+                                    <img src="images-miniaturki/MVI_5377.00_00_39_12.Still004.jpg">
+                                    <p>Boneless Terror - Moja sztuka [🎥:MXR]</p>
+                                </div>
+                            </a>
+                        </li>
 
-        <div class="flexboxik">
+                        <li id="secondLink">
+                            <a  href="#">
+                                <div class="flexboxik">
+                                    <img src="images-miniaturki/krj-min.jpg">
+                                    <p>martin - KRJ [🎥: MXR]</p>
+                                </div>
+                            </a>
+                        </li>
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="2500">
-                        <img src="images/Koncert-1.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/Koncert-28.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/koncert-Toruń-19.jpg" class="d-block w-100" alt="...">
-                    </div>
+                        <li id="thirdLink">
+                            <a href="#">
+                                <div class="flexboxik">
+                                    <img src="images-miniaturki/nie_uwierzy-min.jpg">
+                                    <p>Kosma x Ćwiku x martin - NIE UWIERZY MI MAMA [🎥: MXR]</p>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li id="fourthLink">
+                            <a href="#">
+                                <div class="flexboxik">
+                                    <img src="images-miniaturki/SEPPUKU.jpg">
+                                    <p>martin - Seppuku [🎥: MXR]</p>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li id="fifthLink">
+                            <a href="#">
+                                <div class="flexboxik">
+                                    <img src="images-miniaturki/super wers duze.jpg">
+                                    <p>KOSMA - SUPERWERS [🎥: MXR]</p>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li id="sixthLink">
+                            <a href="#">
+                                <div class="flexboxik">
+                                    <img src="images-miniaturki/brut-art.jpg">
+                                    <p>Abas - BRUT-ART (🎥: MXR) (prod.Mustang)</p>
+                                </div>
+                            </a>
+                        </li>
+
+                    </ol>
                 </div>
             </div>
+        </section>
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="2500">
-                        <img src="images/zdj.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/Karol-gotowe-15.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/breaking-bad-9.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
+        <section id="fotografia">
+            <h2>FOTOGRAFIA</h2>
+            <div class="flexboxik-napisy">
+                <h3>KONCERTOWA</h3>
+                <h3>BACKSTAGE</h3>
             </div>
 
-        </div>
+            <div class="flexboxik">
+
+                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="2500">
+                            <img src="images/Koncert-1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            <img src="images/Koncert-28.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            <img src="images/koncert-Toruń-19.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+
+                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="3000">
+                            <img src="images/zdj.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            <img src="images/Karol-gotowe-15.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2500">
+                            <img src="images/breaking-bad-9.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
     </main>
 
@@ -72,6 +145,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <script src="app.js"></script>
 
 </body>
 
