--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>MXR VIDEO</title>
+    <link rel="icon" href="logo.png">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -18,7 +20,7 @@
     <header>
       <div id="page-logo">
         <a href="index.html">
-          <img src="images/logo/logopage.png" alt="logo" />
+          <img src="logo.png" alt="logo" />
         </a>
       </div>
       <nav>
@@ -116,16 +118,16 @@
 
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="2500">
+                        <div class="carousel-item active" data-bs-interval="3000">
                             <img src="images/Koncert-1.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item" data-bs-interval="2500">
+                        <div class="carousel-item" data-bs-interval="3000">
                             <img src="images/Koncert-28.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item" data-bs-interval="2500">
+                        <div class="carousel-item" data-bs-interval="3000">
                             <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item" data-bs-interval="2500">
+                        <div class="carousel-item" data-bs-interval="3000">
                             <img src="images/koncert-Toruń-19.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
@@ -133,13 +135,13 @@
 
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="3000">
+                        <div class="carousel-item active" data-bs-interval="3500">
                             <img src="images/zdj.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item" data-bs-interval="2500">
+                        <div class="carousel-item" data-bs-interval="3000">
                             <img src="images/Karol-gotowe-15.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item" data-bs-interval="2500">
+                        <div class="carousel-item" data-bs-interval="3000">
                             <img src="images/breaking-bad-9.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
@@ -148,117 +150,7 @@
             </div>
         </section>
 
-      <div class="flexboxik">
-        <div
-          id="carouselExampleInterval"
-          class="carousel slide carousel-fade"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="2500">
-              <img src="images/Koncert-1.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item" data-bs-interval="2500">
-              <img
-                src="images/koncert-Toruń-19.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item" data-bs-interval="2500">
-              <img
-                src="images/Koncert-28.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item" data-bs-interval="2500">
-              <img
-                src="images/Koncert-124-2.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleInterval"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleInterval"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
 
-        <div
-          id="carouselExampleInterval"
-          class="carousel slide carousel-fade"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="2500">
-              <img src="images/zdj.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item" data-bs-interval="2500">
-              <img
-                src="images/Karol-gotowe-15.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item" data-bs-interval="2500">
-              <img
-                src="images/Karol-gotowe-15.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item" data-bs-interval="2500">
-              <img
-                src="images/breaking-bad-9.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item" data-bs-interval="2500">
-              <img
-                src="images/Koncert-124-2.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleInterval"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleInterval"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-    </main>
 
     </footer>
 
