--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="col-4">
                     <ol>
 
-                        <li id="firstLink">
+                        <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
                                     <img src="images-miniaturki/MVI_5377.00_00_39_12.Still004.jpg">
@@ -57,7 +57,7 @@
                             </a>
                         </li>
 
-                        <li id="secondLink">
+                        <li class="yt-link">
                             <a  href="#">
                                 <div class="flexboxik">
                                     <img src="images-miniaturki/krj-min.jpg">
@@ -66,7 +66,7 @@
                             </a>
                         </li>
 
-                        <li id="thirdLink">
+                        <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
                                     <img src="images-miniaturki/nie_uwierzy-min.jpg">
@@ -75,7 +75,7 @@
                             </a>
                         </li>
 
-                        <li id="fourthLink">
+                        <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
                                     <img src="images-miniaturki/SEPPUKU.jpg">
@@ -84,7 +84,7 @@
                             </a>
                         </li>
 
-                        <li id="fifthLink">
+                        <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
                                     <img src="images-miniaturki/super wers duze.jpg">
@@ -93,7 +93,7 @@
                             </a>
                         </li>
 
-                        <li id="sixthLink">
+                        <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
                                     <img src="images-miniaturki/brut-art.jpg">
