--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>MXR VIDEO</title>
-    <link rel="icon" href="logo.png">
+        <title>MXR VIDEO</title>
+        <link rel="icon" href="logo.png">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-</head>
-    
-  <body>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+<body>
     <header>
-      <div id="page-logo">
-        <a href="index.html">
-          <img src="logo.png" alt="logo" />
-        </a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="">PORTFOLIO</a></li>
-          <li><a href="">USŁUGI</a></li>
-          <li><a href="">O MNIE</a></li>
-          <li><a href="">FAQ</a></li>
-          <li><a href="">KONTAKT</a></li>
-        </ul>
-      </nav>
+        <div id="page-logo">
+            <a href="index.html">
+                <img src="logo.png" alt="logo" />
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="">PORTFOLIO</a></li>
+                <li><a href="">USŁUGI</a></li>
+                <li><a href="">O MNIE</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">KONTAKT</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
@@ -58,7 +59,7 @@
                         </li>
 
                         <li id="secondLink">
-                            <a  href="#">
+                            <a href="#">
                                 <div class="flexboxik">
                                     <img src="images-miniaturki/krj-min.jpg">
                                     <p>martin - KRJ [🎥: MXR]</p>
@@ -151,19 +152,43 @@
         </section>
 
 
+        <section id="KONTAKT">
+            
+            <h2>KONTAKT</h2>
 
-    </footer>
+            <div id="messageDiv">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+                <div>
 
-    <script src="app.js"></script>
+                    <p>Email</p>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+                    <input id="majl" type="email">
+
+                    <p>Wiadomość</p>
+
+                    <textarea id="majlText"></textarea>
+
+                </div>
+
+                <button type="button">Wyślij</button>
+
+            </div>
+
+        </section>
+
+
+
+        <footer></footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+
+        <script src="app.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+</body>
+
 </html>
