--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <main>
 
-        <section>
+        <section id="TELEDYSKI">
             <h2>TELEDYSKI</h2>
             <div class="row">
                 <div class="col-8">
