--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <title>MXR VIDEO</title>
         <link rel="icon" href="logo.png">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
@@ -21,14 +27,13 @@
     <header>
         <div id="page-logo">
             <a href="index.html">
-                <img src="logo.png" alt="logo" />
+                <img id="LoGo" src="logo.png" alt="logo" />
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="">PORTFOLIO</a></li>
-                <li><a href="">USŁUGI</a></li>
-                <li><a href="">O MNIE</a></li>
+                <li><a href="#TELEDYSKI">TELEDYSKI</a></li>
+                <li><a href="#FOTOGRAFIA">FOTOGRAFIA</a></li>
                 <li><a href="">FAQ</a></li>
                 <li><a href="">KONTAKT</a></li>
             </ul>
@@ -40,7 +45,7 @@
             <h2>TELEDYSKI</h2>
             <div class="row">
                 <div class="col-8">
-                    <iframe id="ytFrame" width="100%" height="100%"
+                    <iframe class="slideIn " id="ytFrame" width="100%" height="100%"
                         src="https://www.youtube.com/embed/VU1SX5FuG5U?si=2uNT1Jp00Sh7grc0" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -58,7 +63,7 @@
                             </a>
                         </li>
 
-                      
+
                         <li class="yt-link">
 
                             <a href="#">
@@ -100,7 +105,7 @@
                             <a href="#">
                                 <div class="flexboxik">
                                     <img src="images-miniaturki/brut-art.jpg">
-                                    <p>Abas - BRUT-ART (🎥: MXR) (prod.Mustang)</p>
+                                    <p>Abas - BRUT-ART [🎥: MXR]</p>
                                 </div>
                             </a>
                         </li>
@@ -110,75 +115,55 @@
             </div>
         </section>
 
-        <section id="fotografia">
+        <section id="FOTOGRAFIA">
             <h2>FOTOGRAFIA</h2>
-            <div class="flexboxik-napisy">
-                <h3>KONCERTOWA</h3>
-                <h3>BACKSTAGE</h3>
-            </div>
 
-            <div class="flexboxik">
+            <div class="opacityResize">
 
-                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="3000">
-                            <img src="images/Koncert-1.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/Koncert-28.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/koncert-Toruń-19.jpg" class="d-block w-100" alt="...">
+                <div class="flexboxik-napisy">
+                    <h3>KONCERTOWA</h3>
+                    <h3>BACKSTAGE</h3>
+                </div>
+                <div class="flexboxik">
+
+                    <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="3000">
+                                <img src="images/Koncert-1.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="images/Koncert-28.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="images/koncert-Toruń-19.jpg" class="d-block w-100" alt="...">
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="3500">
-                            <img src="images/zdj.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/Karol-gotowe-15.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="3000">
-                            <img src="images/breaking-bad-9.jpg" class="d-block w-100" alt="...">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="3500">
+                                <img src="images/zdj.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="images/Karol-gotowe-15.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="images/breaking-bad-9.jpg" class="d-block w-100" alt="...">
+                            </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </section>
 
-
-        <section id="KONTAKT">
-            
-            <h2>KONTAKT</h2>
-
-            <div id="messageDiv">
-
-                <div>
-
-                    <p>Email</p>
-
-                    <input id="majl" type="email">
-
-                    <p>Wiadomość</p>
-
-                    <textarea id="majlText"></textarea>
-
-                </div>
-
-                <button type="button">Wyślij</button>
-
-            </div>
-
+        <section>
+            <h2>FAQ</h2>
         </section>
-
-
 
         <footer></footer>
 
