added photos and changed one vid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>MXR VIDEO</title>
-        <link rel="icon" href="logo.png">
+        <link rel="icon" href="logos/logo bez tla.png">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
     <header>
         <div id="page-logo">
             <a href="index.html">
-                <img id="LoGo" src="logo.png" alt="logo" />
+                <img id="LoGo" src="logos/logo.png" alt="logo" />
             </a>
         </div>
         <nav>
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-8">
                     <iframe class="slideIn " id="ytFrame" width="100%" height="100%"
-                        src="https://www.youtube.com/embed/VU1SX5FuG5U?si=2uNT1Jp00Sh7grc0" title="YouTube video player"
+                        src="https://www.youtube.com/embed/AdJH8bMYa0A?si=3ptjQx0YqZxFVh1i" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -57,8 +57,8 @@
                         <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/MVI_5377.00_00_39_12.Still004.jpg">
-                                    <p>Boneless Terror - Moja sztuka [🎥:MXR]</p>
+                                    <img src="images-miniaturki/zle_dni.png">
+                                    <p>martin & FELIPE - Złe dni [🎥: MXR]</p>
                                 </div>
                             </a>
                         </li>
@@ -135,17 +135,24 @@
                                 <img src="images/Koncert-28.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item" data-bs-interval="3000">
-                                <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
+                                <img src="images/koncert_MRG-22.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item" data-bs-interval="3000">
                                 <img src="images/koncert-Toruń-19.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="images/koncert_MRG-21.jpg" class="d-block w-100" alt="...">
+                            </div>
+
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="images/Koncert-124-2.jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
 
                     <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active" data-bs-interval="3500">
+                            <div class="carousel-item active" data-bs-interval="3000">
                                 <img src="images/zdj.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item" data-bs-interval="3000">
