--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 
 <body>
@@ -29,13 +32,14 @@
             <a href="index.html">
                 <img id="LoGo" src="logos/logo.png" alt="logo" />
             </a>
+            <button id="hamburger" class="hamburger">&#9776;</button>
         </div>
-        <nav>
+        <nav id="nav-links">
             <ul>
                 <li><a href="#TELEDYSKI">TELEDYSKI</a></li>
                 <li><a href="#FOTOGRAFIA">FOTOGRAFIA</a></li>
                 <li><a href="#FAQ">FAQ</a></li>
-                <li><a href="">KONTAKT</a></li>
+                <li><a href="#FOOTER">KONTAKT</a></li>
             </ul>
         </nav>
     </header>
@@ -216,9 +220,15 @@
             </ul>
         </section>
 
-        <section id="">
+        <section id="FOOTER">
             <footer>
-
+                <div id="footerDiv">
+                    <div id="telephoneDiv">
+                        <i class="fa fa-phone"></i>
+                        <span> +48 728 150 890</span>
+                    </div>
+                    <a href="https://www.instagram.com/mxr_video/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                </div>
             </footer>
         </section>
 
