-Fixed #LoGo width to display properly at 768px breakpoint -Added a mobile menu for better navigation on smaller screens

--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
             </ul>
         </nav>
     </header>
+
+    <aside class="mobile-menu">
+
+        <ul class="mobile-menu-list">
+            <li>
+                <a href="#TELEDYSKI">Teledyski</a>
+            </li>
+
+            <li><a href="#FOTOGRAFIA">Fotografia</a></li>
+
+            <li><a href="#FAQ">FAQ</a></li>
+
+            <li>
+                <a href="#FOOTER">Kontakt</a>
+            </li>
+        </ul>
+
+        <button class="mobile-menu-close">
+            <i class="fa-solid fa-x"></i>
+        </button>
+    </aside>
     <main>
 
         <section id="TELEDYSKI">
@@ -237,7 +258,7 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
 
-        <script src="app.js"></script>
+        <script src="app.js" defer></script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
