changed x icon and improved mobile menu

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </ul>
 
         <button class="mobile-menu-close">
-            <i class="fa-solid fa-x"></i>
+            <i class="fa-solid fa-times"></i>
         </button>
     </aside>
     <main>
