changed photos resolution

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/zle_dni.png">
+                                    <img src="images-miniaturki/zle_dni.jpg">
                                     <p>martin & FELIPE - Złe dni [🎥: MXR]</p>
                                 </div>
                             </a>
