--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-8">
                     <iframe id="ytFrame" width="100%" height="100%"
-                        src="https://www.youtube.com/embed/AdJH8bMYa0A?si=3ptjQx0YqZxFVh1i" title="YouTube video player"
+                        src="https://www.youtube.com/embed/tF6YvDpztQk?si=lECibm5Z3xhVymmI" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -82,8 +82,8 @@
                         <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/zle_dni.jpg">
-                                    <p>martin & FELIPE - Złe dni [🎥: MXR]</p>
+                                    <img src="images-miniaturki/cali.webp">
+                                    <p>martin & kosma - CALI [🎥: MXR]</p>
                                 </div>
                             </a>
                         </li>
