--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-8">
                     <iframe id="ytFrame" width="100%" height="100%"
-                        src="https://www.youtube.com/embed/Gu0pw0sGc58?si=ktcpFRcT9JnoeFDg" title="YouTube video player"
+                        src="https://www.youtube.com/embed/nz3di1xA6FM?si=h_etIRyj4IPOm0GY" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -82,8 +82,8 @@
                         <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/SEPPUKU.jpg">
-                                    <p>martin - Seppuku [🎥: MXR]</p>
+                                    <img src="images-miniaturki/Ye.webp">
+                                    <p>martin & Felipe - YE [🎥: MXR]</p>
                                 </div>
                             </a>
                         </li>
