feat: changed one video

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                         <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/cali.webp">
-                                    <p>martin & kosma - CALI [🎥: MXR]</p>
+                                    <img src="images-miniaturki/slysze_glosy.jpg">
+                                    <p>AAleksander - Słyszę głosy [🎥:MXR]</p>
                                 </div>
                             </a>
                         </li>
