feat: changed one music vid

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="row">
                 <div class="col-8">
                     <iframe id="ytFrame" width="100%" height="100%"
-                        src="https://www.youtube.com/embed/nz3di1xA6FM?si=h_etIRyj4IPOm0GY" title="YouTube video player"
+                        src="https://www.youtube.com/embed/QzIVKJBwLfA?si=5qdMiAlic2bD5jLE" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -118,8 +118,8 @@
                         <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/Ye.webp">
-                                    <p>martin & Felipe - YE [🎥: MXR]</p>
+                                    <img src="images-miniaturki/pospiech.png">
+                                    <p>martin - pośpiech ft. Kosma [🎥: MXR]</p>
                                 </div>
                             </a>
                         </li>
@@ -129,8 +129,8 @@
 
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/krj-min.jpg">
-                                    <p>martin - KRJ [🎥: MXR]</p>
+                                    <img src="images-miniaturki/Ye.webp">
+                                    <p>martin & Felipe - YE [🎥: MXR]</p>
                                 </div>
                             </a>
                         </li>
