fix: removed telephone number

--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
             <footer>
                 <div id="footerDiv">
                     <div id="telephoneDiv">
-                        <i class="fa fa-phone"></i>
-                        <span> +48 728 150 890</span>
+                        <h4>Zapraszamy do kontaktu!</h4>
+                        <span> W sprawie rezerwacji lub dodatkowych informacji prześlij nam wiadomość prywatną na Instagramie – odpowiadamy szybko! 📩</span>
                     </div>
                     <a href="https://www.instagram.com/mxr_video/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
