--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <p>Czas oczekiwania zależy od ilości materiału, ale zazwyczaj teledysk jest gotowy w ciągu tygodnia
                         (max 2-3
                         tygodnie w przypadku większej ilości zleceń), a zdjęcia w ciągu 3-4 dni (max 1-2 tygodnie w
-                        przypadku większej ilości zleceńe).
+                        przypadku większej ilości zleceń).
                     </p>
                 </li>
                 <hr>
