chore: changed vids

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                         <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/nie_uwierzy-min.jpg">
-                                    <p>Kosma x Ćwiku x martin - NIE UWIERZY MI MAMA [🎥: MXR]</p>
+                                    <img src="images-miniaturki/cwiku-serioToCzuje.webp">
+                                    <p>Ćwiku - serio to czuję [🎥: MXR]</p>
                                 </div>
                             </a>
                         </li>
@@ -159,8 +159,8 @@
                         <li class="yt-link">
                             <a href="#">
                                 <div class="flexboxik">
-                                    <img src="images-miniaturki/bujaj_sie.webp">
-                                    <p>Ćwiku - BUJAJ SIĘ [🎥: MXR]</p>
+                                    <img src="images-miniaturki/martin-nonDucor.webp">
+                                    <p>martin - non ducor, duco [🎥: MXR]</p>
                                 </div>
                             </a>
                         </li>
